feat: use service in user task REST controller
Replaces explicit broker client handling in the user task REST controller by using the
provided user task service and its domain-specific methods.

Authentication data, e.g. the token, is attached to the broker request by the service.
The service method invocation hands over the authentication data known to the REST controller.

The REST controller and mapper use specific container records for validated and transformed
request data instead of broker command request classes.